--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 This is the top level of the FreeBSD source directory.  This file
 was last revised on:
-$FreeBSD$ OK
+$FreeBSD$ 
 
 For copyright information, please see the file COPYRIGHT in this
 directory (additional copyright information also exists for some
